tactics imporvements, fixes issue with too small iframe and not visible accept button

--- a/src/app/features/tactics/tactics.component.scss
+++ b/src/app/features/tactics/tactics.component.scss
@@ -4,6 +4,11 @@
   margin: 0 auto;
   padding-top: 0.5rem;
   box-sizing: border-box;
+
+  @media (max-width: 400px) {
+    width: 420px;
+    min-width: 420px;
+  }
 }
 
 .team-select {
