--- a/src/app/shared/components/layout/layout.component.scss
+++ b/src/app/shared/components/layout/layout.component.scss
@@ -20,5 +20,6 @@
 
 .main-content {
   padding: 1.5rem;
+  padding-bottom: 3rem;
   background-color: var(--bg-primary);
 }
